Implement multicast-group queue API.
